Bug 472548 - Improves the nsIdleService on Maemo. r=gijskruitbosch, sr=stuart